# play

./: .gitignore  README.md  WORKSPACE  go_third_party.bzl
backend/services/wiki/: BUILD.bazel  main.go
backend/services/wiki/mything/: BUILD.bazel  utitlity.go
backend/services/wiki/server/: BUILD.bazel  server.go
frontend/wiki-ui/: BUILD.bazel  package.json
src/golang/: BUILD.bazel  go.mod
src/golang/services/wiki/: BUILD.bazel  main.go
src/golang/services/wiki/server/: BUILD.bazel  server.go
