load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ssargent/play/services/wiki",
    visibility = ["//visibility:private"],
    deps = ["//services/wiki/server:go_default_library"],
)

go_binary(
    name = "wiki",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
